# src/routes/message.routes.js
@@ -7,5 +7,6 @@ router.get("/", messageController.getNumbers);
 router.post("/", messageController.addNumber);
 router.post("/send", messageController.sendMessage);
 router.post("/sendToMany", messageController.sendToMany);
+router.post("/dailyReport", messageController.dailyReport);
 
 module.exports = router;
